240325 재원 fix: getFirst() - java21 문제 해결